fixed spacing issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -273,6 +273,7 @@ COMPONENTS
   }
 }
 .image-grid {
+  margin-top: 1.875rem;
   -ms-grid-column-span: 2;
   grid-column: span 2;
   display: -ms-grid;
